--- a/src/components/Loader/Loader.scss
+++ b/src/components/Loader/Loader.scss
@@ -4,6 +4,7 @@
   width: 80px;
   height: 80px;
 }
+
 .lds-ripple div {
   position: absolute;
   border: 4px solid rgb(10, 10, 10);
@@ -11,9 +12,11 @@
   border-radius: 50%;
   animation: lds-ripple 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
+
 .lds-ripple div:nth-child(2) {
   animation-delay: -0.5s;
 }
+
 @keyframes lds-ripple {
   0% {
     top: 36px;
@@ -22,6 +25,7 @@
     height: 0;
     opacity: 1;
   }
+
   100% {
     top: 0px;
     left: 0px;
@@ -29,4 +33,11 @@
     height: 72px;
     opacity: 0;
   }
+}
+
+.loader {
+  height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
