--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,16 @@
+@import 'sass/colors';
+
 *,
 *::before,
 *::after {
     box-sizing: border-box;
     font-family: 'Rubik', sans-serif;
+}
+
+body {
+    min-height: 100vh;
+    min-width: 100vw;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
 }
